# CUB-OS-homeworks

./: .gitignore  CMakeLists.txt  README.md
energy-drinks/energy-drinks/: CMakeLists.txt  energy-drinks.c  energy-drinks.h  lib.c  lib.h
env/: env.c
gwgd/: .clang-format  chlng.c  chlng.h  main.c  main.h  player.c
gwgd/app/basic/: main.c  main.h
gwgd/app/libevent/: main.c  main.h
gwgd/lib/: lib.c  lib.h
gwgd/util/: chlng.c  chlng.h  player.h
math-multithreading/: CMakeLists.txt  README.md  dpnum.c  dpnum.h
math-multithreading/scripts/: build.sh  plot.py  test.sh
prisoners/: CMakeLists.txt  README.md  prisoners.c  prisoners.h
seminar/: bathroom.c
xargs/: xargs.c  xargs.h
